--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -202,7 +202,7 @@ label.form-check-label {
       position: absolute;
       top: 1px;
       right: 5px;
-      content: "Off";
+      content: "No";
       display: block;
       color: var(--typography-color-primary);
     }
@@ -210,7 +210,7 @@ label.form-check-label {
     &:checked::after {
       left: 5px;
       right: auto;
-      content: "On";
+      content: "Yes";
       color: var(--typography-color-primary-invert);
     }
   }
