--- a/frontend-legacy/src/components/page/home/Home.css
+++ b/frontend-legacy/src/components/page/home/Home.css
@@ -8,9 +8,16 @@
   padding: 30px;
 }
 
+.hm-row {
+  margin-bottom: 32px;
+}
+
 .hm-row div,
 .hm-row button {
-  width: 100% !important;
+  width: inherit;
+  margin-left: auto;
+  margin-right: auto;
+  min-height: inherit !important;
 }
 
 .hm-row div input {
