CMS-1082: Add "Optional" labels for date types
CMS-1082: Hide "Remove" button for index 0

CMS-1082: Show optional labels on all levels

CMS-1082: Add optional prop for DateRangeFields

CMS-1082: Fix level parameter in isDateTypeOptional calls

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -104,6 +104,13 @@ a:not(.btn):focus {
   }
 }
 
+// custom bootstrap text color: "secondary-grey"
+// (The Bootstrap theme's "secondary" color is blue.
+// This uses the dark grey color from the design tokens.)
+.text-secondary-grey {
+  color: var(--typography-color-secondary) !important;
+}
+
 // override bootstrap button disabled styles
 .btn:disabled,
 .btn.disabled {
