--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -233,14 +233,20 @@ label.form-check-label {
 // custom table styles
 table {
   // override bootstrap table border
+  thead {
+    border-bottom: 2px solid var(--surface-color-border-dark);
+  }
   &.has-header-row {
     border: var(--layout-border-width-medium) solid var(--theme-primary-blue);
-    thead {
-      border-bottom: 2px solid var(--surface-color-border-dark);
-    }
     tbody {
       border-bottom: var(--layout-border-width-small) solid
         var(--surface-color-border-default);
+    }
+  }
+  
+  &.table-striped {
+    thead > tr > th {
+      width: 25%;
     }
   }
 }
