--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -244,3 +244,22 @@ table {
     }
   }
 }
+
+// custom tooltip styles
+.tooltip {
+  .tooltip-inner {
+    background-color: var(--theme-primary-blue);
+  }
+  &.bs-tooltip-top .tooltip-arrow::before {
+    border-top-color: var(--theme-primary-blue);
+  }
+  &.bs-tooltip-bottom .tooltip-arrow::before {
+    border-bottom-color: var(--theme-primary-blue);
+  }
+  &.bs-tooltip-start .tooltip-arrow::before {
+    border-left-color: var(--theme-primary-blue);
+  }
+  &.bs-tooltip-end .tooltip-arrow::before {
+    border-right-color: var(--theme-primary-blue);
+  }
+}
