--- a/frontend/src/styles/_tooltip.scss
+++ b/frontend/src/styles/_tooltip.scss
@@ -1,18 +1,17 @@
 .tooltip {
-  opacity: 1 !important;
   .tooltip-inner {
-    background-color: var(--theme-primary-blue);
+    background-color: var(--typography-color-primary);
   }
   &.bs-tooltip-top .tooltip-arrow::before {
-    border-top-color: var(--theme-primary-blue);
+    border-top-color: var(--typography-color-primary);
   }
   &.bs-tooltip-bottom .tooltip-arrow::before {
-    border-bottom-color: var(--theme-primary-blue);
+    border-bottom-color: var(--typography-color-primary);
   }
   &.bs-tooltip-start .tooltip-arrow::before {
-    border-left-color: var(--theme-primary-blue);
+    border-left-color: var(--typography-color-primary);
   }
   &.bs-tooltip-end .tooltip-arrow::before {
-    border-right-color: var(--theme-primary-blue);
+    border-right-color: var(--typography-color-primary);
   }
 }
